# gamebidz-server

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  requirements.txt
app/controllers/: auction_controller.py  user_controller.py
app/db/: db.py
app/db/models/: auction.py  bid.py  user.py
app/repositories/: auction_repository.py  user_repository.py
app/routes/: auction_routes.py  user_routes.py
app/services/: auction_service.py  user_service.py
