[tool.poetry]
name = "gamebidz-server"
version = "0.1.0"
description = ""
authors = ["Juan Ruiz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pymysql = "^1.1.1"
bcrypt = "^4.1.3"
uvicorn = "^0.30.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
